# learn_nox

./: Dockerfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-ci.yml
app/: main.py  schemas.py
app/routers/: items.py
tests/: test_main.py
