[project]
name = "learn-nox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
